[gd_scene load_steps=6 format=3 uid="uid://bytkqsttf042o"]

[ext_resource type="Texture2D" uid="uid://hdp76rpp3fs1" path="res://Media/imatges/backgroundTirall/tirall.png" id="1_6nvmy"]
[ext_resource type="Script" path="res://MiniGames/TestingMaTirAll.gd" id="1_le7cu"]
[ext_resource type="PackedScene" uid="uid://dil6vt7mp1o52" path="res://UI/maTirAll/maTirAll.tscn" id="2_f6vmc"]
[ext_resource type="Texture2D" uid="uid://bmwtc13rt7xqv" path="res://Media/imatges/butto/button_1.png" id="4_plqkg"]
[ext_resource type="Texture2D" uid="uid://ctm64fwlpgt5s" path="res://Media/imatges/allxoca/allxoca_1.png" id="5_0v5ad"]

[node name="TestingMaTirAll" type="Node2D"]
script = ExtResource("1_le7cu")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6nvmy")

[node name="MaTirAll" parent="." instance=ExtResource("2_f6vmc")]

[node name="Start" type="TouchScreenButton" parent="."]
position = Vector2(68, 120)
texture_normal = ExtResource("4_plqkg")

[node name="Stop" type="TouchScreenButton" parent="."]
position = Vector2(112, 117)
texture_normal = ExtResource("4_plqkg")

[node name="UpDown" type="TouchScreenButton" parent="."]
position = Vector2(157, 106)
texture_normal = ExtResource("4_plqkg")

[node name="LeftRight" type="TouchScreenButton" parent="."]
position = Vector2(202, 107)
texture_normal = ExtResource("4_plqkg")

[node name="Obredits" type="TouchScreenButton" parent="."]
position = Vector2(241, 127)
texture_normal = ExtResource("4_plqkg")

[node name="Label" type="Label" parent="."]
offset_left = 26.0
offset_top = 58.0
offset_right = 66.0
offset_bottom = 81.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(51, 173)
texture = ExtResource("5_0v5ad")

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="UpDown" to="." method="_on_up_down_pressed"]
[connection signal="pressed" from="LeftRight" to="." method="_on_left_right_pressed"]
[connection signal="pressed" from="Obredits" to="." method="_on_obredits_pressed"]
